--- a/prosess/oppstart-utvikling.tex
+++ b/prosess/oppstart-utvikling.tex
@@ -252,13 +252,13 @@ andre har mer fagspesifikke lederroller.
 Bales statuerer og at sosial-emosjonelle aksjoner ofte blir igangsatt av medlemmer som er 
 mindre involverte i oppgaveretta aksjoner. Dette ser vi igjen i gruppa ved at Joakim var 
 involvert flere sosial-emosjonelle aksjoner. Denne situasjonen har oppstått ved at prosjektet 
-er noe utenfor hans fagfelt, og han er dermed blitt mindre involvert i selve oppgaveløysingen. 
+er noe utenfor hans fagfelt, og han er dermed blitt mindre involvert i selve oppgaveløsingen. 
 Joakim har delvis valgt dette bevisst ved en landsby der hans fagkompetanse ikke
 står sterkest. Da hans rolle blir mindre faglig, kommer han naturlig inn i en
 rolle som er mer i retning av en fasilitator for godt gruppemiljø. At ett av
 gruppemedlemmene har hatt en slik rolle, i tillegg til å bidra faglig, har
 utvilsomt gjort at gruppa har hatt høy ytelse når vi jobber, og heller tar
-naturlige pauser med god stemning og humor nå medlemmene er slitne. Dette har
+naturlige pauser med god stemning og humor når medlemmene er slitne. Dette har
 nok også hatt en effekt på at medlemmene i gruppa ble fort kjent med hverandre.
 Joakim har utfylt denne rollen blant annet ved å alltid stille med en positiv innstilling og 
 å involvere gruppa i diskusjoner som går på andre ting enn kun det faglige.
@@ -278,26 +278,26 @@ kan tas.
 \label{fig:medlemmer}
 \end{figure}
 
-I \cref{fig:medlemmer} har vi brukt den ene prosessøvelsen til 
-lage eit plot over egenskepene til gruppemedlemmene. Me ser at dei personlege egenskapene reflekteres 
-igjen i dei rollene gruppemedlemmer har tatt på gruppa. Som gruppas kritikker ser me at Knut skårer 
-høgt på punktet; setter spørsmålsteikn ved teamets avgjørelser. Han skårer og høgere på punktet; trekker
-seg ut av teamet; som igjen kan trekkes tilbake til at han har ein lederposisjon ved implimentering av
-programmet, som er noe sjølvstendig arbeid. Joakim skiller seg mest fra gruppa på punktet; Bidrar til at teamet 
-sporer av. Det kan relateres tilbake til Joakims rolle som energigiver. Den beste måten å lade opp att
-for videre jobbing av prosjekt er ofte ved å få litt avspredele frå sjølve oppgåvejobbinga.
-Åsmund skårer høgt på punkta; tar initiativ og søker info og opplysninger. Dette kan relateres tilbake 
-til lederrollen Åsmund har tatt for fysikkdelen avprosjektet som er veldig teoretisk. (Når ein prøver å 
-modellere ein prosess realistisk kan modellen raskt bli komplisert. Det er da viktig  at me har nok 
-informasjon til å kunne gjøre forenklinger som fremdeles resulterer i eit realistisk modell).
-Turid er den som skårer høyset på punkta; dominerer og koordinerer, samordner, søker enighet, som igjen kan
-relateres tilbake til den rollen hun har hatt som sosial-emosjonell leder. Ellers legg me merke til at gruppa
-generelt er flinke til å ta initiativ, søkje info/opplysninger og gi uttrykk for sine meininger. Paul er den 
-i teamet som er mest oppgåvefokusert, og me ser ein tendens i modellen til at han skårer noko høgare på 
-tilbakeholden i teamet.
-
-ref // (1) Handbok for gruppearbeidet
-%bruk \cite{svenskeboka} - Åsmund
+I \cref{fig:medlemmer} har vi brukt den ene prosessøvelsen til å
+lage et plot over egenskapene til gruppemedlemmene. Vi ser at de personlige
+ egenskapene er reflektert i de rollene gruppemedlemmer har påtatt seg i gruppa. Som gruppas
+kritiker ser vi at Knut skårer høyt, han setter ofte spørsmålstegn ved teamets avgjørelser. 
+Han skårer også høyere på punktet ``trekker seg ut av teamet'', som igjen kan trekkes tilbake 
+til at han har en lederposisjon ved implementering av
+programmet. Joakim skiller seg mest fra gruppa på punktet ``Bidrar til at teamet 
+sporer av''. Det kan relateres tilbake til Joakims rolle som energigiver. Den beste måten å lade opp igjen
+for videre jobbing med prosjektet er ofte ved å få litt adspredelse fra selve oppgavejobbinga.
+Åsmund skårer høyt på punkta ``tar initiativ'' og ``søker info og opplysninger''. 
+Dette kan relateres til lederrollen Åsmund har tatt for fysikkdelen av prosjektet,
+som er veldig teoretisk. (Når en prøver å modellere en prosess realistisk kan
+modellen raskt bli komplisert. Det er da viktig at vi har nok informasjon til å
+kunne gjøre forenklinger som fremdeles resulterer i et realistisk modell).
+Turid er den som skårer høyest på punktet ``dominerer og koordinerer, samordner, søker
+enighet'', som igjen kan relateres tilbake til den rollen hun har hatt som
+sosial-emosjonell leder. Ellers legger vi merke til at gruppa
+generelt er flinke til å ta initiativ, søke info/opplysninger og gi uttrykk for sine meninger. Paul
+er den i teamet som er mest oppgavefokusert, og vi ser en tendens i modellen til
+at han skårer noe høyere på ``tilbakeholden i teamet''.
 
 \section{Tilbakeblikk}
 \label{sec:tilbakeblikk}
@@ -331,8 +331,8 @@ det ikke er noen signifikant forandring før/etter.}
 \end{table}
 
 Vi har likevel en kommentar til Sjøvolds konklusjon vedrørende kategorien
-\emph{åpenhet}. Selv om gruppa nok er like åpen nå ved slutten enn ved oppstart,
-er terskelen for å være åpen med andre gruppemedlemmer om problemer, kritikk
-o.l., lavere. Slik at eksponeringen over tid har gjort interaksjonen mellom
-medlemmene mer ukomplisert. Vi erkjenner likevel at rollene hver enkelt påtok
+\emph{åpenhet}. Selv om gruppas åpenhet er uendret, har kommunikasjonen blitt
+tryggere og medlemmene trenger ikke ta like mye hensyn til mottakers følelser, 
+slik at eksponeringen over tid har gjort interaksjonen mellom
+medlemmene mer ukomplisert. Vi erkjenner også at rollene hver enkelt påtok
 seg ved starten, har forblitt tilnærmet uforandret gjennom semesteret.
