--- a/prosess/analyse.tex
+++ b/prosess/analyse.tex
@@ -62,7 +62,9 @@ en form for sirkel nettverk, der et medlem uttrykker sin mening før han sender 
  som ordstyrer, når de følte det var nødvendig. Dette førte til at vi fikk en naturlig styringsprosess
   ved gruppediskusjoner, uten at vi trengte å skrive en formell regel i gruppekontrakten.
 
-\textsc{Gruppelogg 11:}
+\begin{centering}
+\textsc{Gruppelogg 11, utdrag:}
+\end{centering}
 \begin{quote}
 Etter lunsj var det en meget god gruppeaktivitet i regi læringsassistentene.
 Gruppemedlemmene skulle ved hjelp av poeng, rangere seg selv og gruppemedlemmer
@@ -74,7 +76,7 @@ gruppa i prosessrapporten skulle inneholde to aspekter pr. gruppemedlem.
 \end{itemize}
 Altså var denne biten av prosessrapporten en naturlig forlengelse av øvingen, og
 dermed noe vi følte vi hadde stort utbytte av.
-\begin{quote}
+\end{quote}
 
 Verdt å kommentere er at gruppa (tilsynelatende) virker meget trygge på hverandre.
 Det var ingen pinlige og/eller flaue situasjoner i forbindelse med
@@ -87,7 +89,9 @@ klarer å formidle hva de presenterer/står for på en slik måte at andre sitte
 igjen med det samme bildet som gruppemedlemmet prøver å formidle. Dette viser
 tilbake til en effektiv kommunikasjon på gruppa (\ref{sec:kommunikasjonsteori}).
 
-%\textsc{Gruppelogg 4:}
+%\begin{centering}
+%\textsc{Gruppelogg 4, utdrag:}
+%\end{centering}
 %\begin{quote}
 %Det noteres at gruppedynamikken har blitt ganske god iløpet av disse ukene, og
 %debatten rundt problemstilling var frisk og nyansert. Diskusjonene fører til noe
@@ -100,7 +104,9 @@ tilbake til en effektiv kommunikasjon på gruppa (\ref{sec:kommunikasjonsteori})
 %og uten oversikt over hva de andre arbeidet med. 
 %\end{quote}
 
-\textsc{Gruppelogg 6:}
+\begin{centering}
+\textsc{Gruppelogg 6, utdrag:}
+\end{centering}
 \begin{quote}
 På grunn av presentasjonen av faglitteratur, samt oppgavepresentering fra en gruppe,
 idag tidlig, mistet vi vårt morgenmøte. Vi fikk derfor ikke tildelt arbeidsoppgaver på 
@@ -143,7 +149,9 @@ mer effektivt. Vi er ikke redde for å tråkke hverandre på ``tærne'', noe som
 
 %Aksjoner for å betre gruppekommunikasjonen. Kaffepause, runde rundt bordet osv.!
 
-\textsc{Gruppelogg 12:}
+\begin{centering}
+\textsc{Gruppelogg 12, utdrag:}
+\end{centering}
 \begin{quote}
 Vi har hatt framføring av grupperapport og prosessrapport idag. Gruppen er fornøyd med egen innsats, da 
 vi fekk sagt det vi skulle innenfor de rammene som var gitt. I en slik situasjon merker vi og at den 
@@ -284,4 +292,5 @@ som tar for seg humor (\cite{jj-humor} og \cref{sec:kommunikasjonsteori}) stemme
 meget godt med humors innvirkning på gruppeprosesser i virkeligheten.
 
 %Kommenter Wheelan sitt sitat om at effektive grupper er saklige 80% av tida
+
 
