--- a/prosess/oppstart-utvikling.tex
+++ b/prosess/oppstart-utvikling.tex
@@ -317,13 +317,13 @@ EiT-gruppe ikke er signifikant (se \cref{tab:sjovold}).
 \begin{table}[ht!]
 \centering
 \begin{tabular}{l c c}
-& Pre & Post  \hline
-Kontroll & 3.15 & 3.00 
-Åpenhet & 4.71 & 4.61 
-Avhengighet & 5.54 & 5.48 
-Opposisjon & 1.50 & 1.36 
-Innesluttethet & 1.20 & 1.09 
-Synergi & 6.51 & 6.54  \hline
+& Pre & Post  \\
+Kontroll & 3.15 & 3.00 \\
+Åpenhet & 4.71 & 4.61 \\
+Avhengighet & 5.54 & 5.48 \\
+Opposisjon & 1.50 & 1.36 \\
+Innesluttethet & 1.20 & 1.09 \\
+Synergi & 6.51 & 6.54 \\
 \end{tabular}
 \caption{Resultater fra Sjøvolds studie av EiT-grupper over ett semester, ser at
 det ikke er noen signifikant forandring før/etter.}
