--- a/prosess/medlemmer.tex
+++ b/prosess/medlemmer.tex
@@ -73,7 +73,7 @@ grunnlag i ulike personligheter og kommunikasjonsstil. Da vi ikke har hatt noe
 opplæring i å takle disse ulikhetene og de medhørende konfliktene, har
 disse ulikhetene ofte hatt en negativ innvirkning på gruppearbeidet i form av
 uløste konflikter og stagnering. Jeg har dermed sett fram til muligheten til å
-lære mer om selve gruppeprosess og gruppedynamikk for å kunne takle slike
+lære mer om gruppeprosess og gruppedynamikk for å kunne takle slike
 situasjoner annerledes i fremtiden. Jeg trives vanligvis godt i grupper, og synes
 gruppearbeid kan være både fremmende og utfordrende. Jeg så derfor fram til å
 jobbe i en mer heterogen gruppe, med tanke på fagbakgrunn.
