--- a/prosess/oppstart-utvikling.tex
+++ b/prosess/oppstart-utvikling.tex
@@ -69,16 +69,32 @@ skeptiske fordi oppgaven virket komplisert og uklart definert. Gruppa kom til
 slutt fram til at det var mange potensielle problemer som kunne oppstå hvis vi
 valgte denne oppgaven.
 
+Her blir det satt spørsmål ved gjennomførbarheten til framlagte problemstilling. Dette
+fører til ein diskusjon rundt tema, der medlemmer legg frem fakta og mulige komplikasjoner 
+som kan opstå i arbeidet rundt oppgava. Medlemmene legg og frem sine synspunkt om kvifor 
+dei er for temaet ski for oppgava eller imot. Når avgjørelsen blir tatt om å velgje ei
+annan problemstilling, sitter dermed alle medlemmer med all relevant informasjon så vel som interessene 
+til dei andre medlemmene i prosjektet. Me følgjer her retningslinjene 2 og 5 \ref{tab:grunnregler} i Scwarts
+regler for effektive grupper. Dette gjer at me kan ta ein riktig avgjørelse, basert på all fakta. Det er og 
+viktige å notere seg at det fortsatt var muligheter for å velgje denne problemstillingen, men 
+det var i gruppasfellesinteresse å utforske andre muligheter. 
+får dermed ein diskusjon
+der alle  
+
 Ny oppgave som ble foreslått skulle ha noe med mat å gjøre, da dette var et av
 de tre hovedtemaene som ble presentert på første landsbydag. Etter lang
 diskusjon om mulige matvarer ble bacon nevnt som et alternativ. Dette var det
 stor begeistring for, og gruppa samlet seg raskt bak denne problemstillingen.
 Gruppa var videre interessert i å inkludere flest mulig fagområder, samt å
-gjøre noe som ikke lignet så mye på tidligere oppgaver. Det virket som om oppgaven inkluderte en del
+gjøre noe som ikke lignet så mye på tidligere oppgaver. Det vart derfor foreslått
+å bruke mikrobølgjeovn som prepareringsmiddel. Det virket som om oppgaven inkluderte en del
 numerikk og fysisk forståelse, noe som passet med de fleste gruppemedlemmene.
 Oppgaven inkluderte også visualisering av resultatet, noe som passet for Knut
 Halvor siden han har drevet med det tidligere. Derfor endte det hele
 med at vi valgte dette som tema i prosjektet.
+
+Etter en lengre og åpen diskusjon klarte me å komme frem til ei problemstilling 
+alle 
 
 %Videre ble det anskaffet en del litteratur slik at vi kunne finne ut hva vi
 %kunne gjøre. Vi fant ut at det fantes en del publikasjoner rundt dette temaet.
@@ -231,7 +247,7 @@ Bales statuerer at medlemmer som er veldig oppgavefokusert er mindre involvert i
 relasjonsrettede aksjoner. Paul er den i gruppa som er mest oppgavefokusert. 
 På gruppa har han en tendens til å ta en faglig tilnærming, og liker å fokusere mest 
 på oppgaven for hånd. Han faller altså oftere inn i rollen som diagnostiker og 
-informasjonssøkeren, se \cref{avs:roller} for en definisjoner av rollene. Paul er dermed en styrke på gruppa ved at han holder 
+informasjonssøkeren, se \cref{avs:roller} for en definisjon av rollene. Paul er dermed en styrke på gruppa ved at han holder 
 diskusjonene relevante, i tillegg til at han er et pålitelig medlem når det gjelder 
 å gjennomføre arbeidet i tide. Vi ser likevel en tendens til at Paul er mindre involvert 
 i relasjonsrettet aksjoner på gruppa. 
