--- a/prosess/oppstart-utvikling.tex
+++ b/prosess/oppstart-utvikling.tex
@@ -78,8 +78,6 @@ til dei andre medlemmene i prosjektet. Me følgjer her retningslinjene 2 og 5 \r
 regler for effektive grupper. Dette gjer at me kan ta ein riktig avgjørelse, basert på all fakta. Det er og 
 viktige å notere seg at det fortsatt var muligheter for å velgje denne problemstillingen, men 
 det var i gruppasfellesinteresse å utforske andre muligheter. 
-får dermed ein diskusjon
-der alle  
 
 Ny oppgave som ble foreslått skulle ha noe med mat å gjøre, da dette var et av
 de tre hovedtemaene som ble presentert på første landsbydag. Etter lang
@@ -93,8 +91,19 @@ Oppgaven inkluderte også visualisering av resultatet, noe som passet for Knut
 Halvor siden han har drevet med det tidligere. Derfor endte det hele
 med at vi valgte dette som tema i prosjektet.
 
-Etter en lengre og åpen diskusjon klarte me å komme frem til ei problemstilling 
-alle 
+Etter en lengre og åpen diskusjon klarte me altså å komme frem til ei problemstilling 
+alle var fornøyde med og følte kjennskap til. Dette var eit viktig mål for gruppen, 
+da resultatet for prosjektdelen såvel som prosessdelen (videre arbeid i EIT) i stor 
+grad avhenger av dette. Me har og hatt fokus på å prøve å innlemme hvert medlems individuelle
+kompetanse i problemstillingen. Med unntak av Joakim, følte me at me fekk til dette ganske bra.
+Det var imidlertidig ein praktis del i problemstillingen, som me følte Joakim ville være bra egnet 
+til å ha ansvar for, da me følte at han innehar ein større praksis kompetanse enn noen av det meir 
+teoretiske annlagte gruppemedlemmene. I etterkant ser me at dette har fungert bra i praksis.
+Kvart medlem har et eget ansvarområde på prosjekte, noe som vil føre til ein naturleg eierskap av prosjektet.
+Her har me og anvendt Johnson and Johnson regel 1(Sørge for at gruppas felles mål anvender hvert medlems
+individuelle kompetanse), anngående effektive grupper, og (husker ikkje kvar eierskap til
+prosjektet kjem fra). 
+
 
 %Videre ble det anskaffet en del litteratur slik at vi kunne finne ut hva vi
 %kunne gjøre. Vi fant ut at det fantes en del publikasjoner rundt dette temaet.
@@ -250,7 +259,7 @@ på oppgaven for hånd. Han faller altså oftere inn i rollen som diagnostiker o
 informasjonssøkeren, se \cref{avs:roller} for en definisjon av rollene. Paul er dermed en styrke på gruppa ved at han holder 
 diskusjonene relevante, i tillegg til at han er et pålitelig medlem når det gjelder 
 å gjennomføre arbeidet i tide. Vi ser likevel en tendens til at Paul er mindre involvert 
-i relasjonsrettet aksjoner på gruppa. 
+i relasjonsrettede aksjoner på gruppa. 
 Den som oftest gikk inn i rollen som sosial-emosjonell leder var Turid. Hun var et viktig 
 ledd i gruppa i form av å uttrykke klare meninger og frustrasjon over sider ved gruppa
 som ikke fungerte optimalt. Hun gikk dermed inn i rollen som kritiker og følelsetolker.
@@ -296,7 +305,7 @@ kan tas.
 
 I \cref{fig:medlemmer} har vi brukt den ene prosessøvelsen til å
 lage et plot over egenskapene til gruppemedlemmene. Vi ser at de personlige
- egenskapene er reflektert i de rollene gruppemedlemmer har påtatt seg i gruppa. Som gruppas
+ egenskapene er reflektert i de rollene gruppemedlemmene har påtatt seg i gruppa. Som gruppas
 kritiker ser vi at Knut skårer høyt, han setter ofte spørsmålstegn ved teamets avgjørelser. 
 Han skårer også høyere på punktet ``trekker seg ut av teamet'', som igjen kan trekkes tilbake 
 til at han har en lederposisjon ved implementering av
