--- a/prosess/oppstart-utvikling.tex
+++ b/prosess/oppstart-utvikling.tex
@@ -96,7 +96,7 @@ alle var fornøyde med og følte kjennskap til. Dette var eit viktig mål for gr
 da resultatet for prosjektdelen såvel som prosessdelen (videre arbeid i EIT) i stor 
 grad avhenger av dette. Me har og hatt fokus på å prøve å innlemme hvert medlems individuelle
 kompetanse i problemstillingen. Med unntak av Joakim, følte me at me fekk til dette ganske bra.
-Det var imidlertidig ein praktis del i problemstillingen, som me følte Joakim ville være bra egnet 
+Det var imidlertidig ein praktisk del i problemstillingen (eksperiment), som me følte Joakim ville være bra egnet 
 til å ha ansvar for, da me følte at han innehar ein større praksis kompetanse enn noen av det meir 
 teoretiske annlagte gruppemedlemmene. I etterkant ser me at dette har fungert bra i praksis.
 Kvart medlem har et eget ansvarområde på prosjekte, noe som vil føre til ein naturleg eierskap av prosjektet.
