fikset noen trykkleif

--- a/prosess/oppstart-utvikling.tex
+++ b/prosess/oppstart-utvikling.tex
@@ -62,7 +62,7 @@ alt tilrettelagt for gruppa til å velge oppgavetema.
 Til å begynne med vurderte gruppa ``ski'' som tema for oppgaven. Ettersom Åsmund
 stod mye på ski var dette en oppgave som interesserte ham veldig. De andre i
 gruppa som ikke hadde så mye kunnskap om dette temaet var litt mer usikre. Det
-ble diskutert de forskjellige problemene som kunne oppstå hvis vi valgte dette
+ble diskutert hvilke problemer som kunne oppstå hvis vi valgte dette
 som tema. Særlig Turid var kritisk, og det ble klart at det var flere
 strukturelle utfordringer knyttet til denne oppgaven. De fleste i gruppa var
 skeptiske fordi oppgaven virket komplisert og uklart definert. Gruppa kom til
