--- a/prosess/oppstart-utvikling.tex
+++ b/prosess/oppstart-utvikling.tex
@@ -70,14 +70,14 @@ slutt fram til at det var mange potensielle problemer som kunne oppstå hvis vi
 valgte denne oppgaven.
 
 Her blir det satt spørsmål ved gjennomførbarheten til framlagte problemstilling. Dette
-fører til ein diskusjon rundt tema, der medlemmer legg frem fakta og mulige komplikasjoner 
-som kan opstå i arbeidet rundt oppgava. Medlemmene legg og frem sine synspunkt om kvifor 
-dei er for temaet ski for oppgava eller imot. Når avgjørelsen blir tatt om å velgje ei
-annan problemstilling, sitter dermed alle medlemmer med all relevant informasjon så vel som interessene 
-til dei andre medlemmene i prosjektet. Me følgjer her retningslinjene 2 og 5 \ref{tab:grunnregler} i Scwarts
-regler for effektive grupper. Dette gjer at me kan ta ein riktig avgjørelse, basert på all fakta. Det er og 
-viktige å notere seg at det fortsatt var muligheter for å velgje denne problemstillingen, men 
-det var i gruppasfellesinteresse å utforske andre muligheter. 
+fører til en diskusjon rundt temaet, der medlemmer legger frem fakta og mulige komplikasjoner 
+som kan opstå i arbeidet rundt oppgava. Medlemmene legg og frem sine synspunkt om hvorfor 
+de er for temaet ski eller imot. Når avgjørelsen blir tatt om å velge en
+annen problemstilling, sitter dermed alle medlemmer med all relevant informasjon så vel som interessene 
+til de andre medlemmene i prosjektet. Vi følger her retningslinjene 2 og 5 \ref{tab:grunnregler} i Scwarts
+regler for effektive grupper. Dette gjør at vi kan ta en riktig avgjørelse, basert på all fakta. Det er og 
+viktig å notere seg at det fortsatt var muligheter for å velge dette temaet for problemstillingen, men 
+at gruppa følte at det var i dens beste egeninteresse å utforske andre muligheter. 
 
 Ny oppgave som ble foreslått skulle ha noe med mat å gjøre, da dette var et av
 de tre hovedtemaene som ble presentert på første landsbydag. Etter lang
@@ -91,15 +91,15 @@ Oppgaven inkluderte også visualisering av resultatet, noe som passet for Knut
 Halvor siden han har drevet med det tidligere. Derfor endte det hele
 med at vi valgte dette som tema i prosjektet.
 
-Etter en lengre og åpen diskusjon klarte me altså å komme frem til ei problemstilling 
-alle var fornøyde med og følte kjennskap til. Dette var eit viktig mål for gruppen, 
+Etter en lengre og åpen diskusjon klarte vi altså å komme frem til en problemstilling 
+alle var fornøyde med og følte kjennskap til. Dette var et viktig mål for gruppa, 
 da resultatet for prosjektdelen såvel som prosessdelen (videre arbeid i EIT) i stor 
-grad avhenger av dette. Me har og hatt fokus på å prøve å innlemme hvert medlems individuelle
+grad avhenger av dette. Vi har og hatt fokus på å prøve å innlemme flest mulige medlemmers individuelle
 kompetanse i problemstillingen. Med unntak av Joakim, følte me at me fekk til dette ganske bra.
-Det var imidlertidig ein praktisk del i problemstillingen (eksperiment), som me følte Joakim ville være bra egnet 
-til å ha ansvar for, da me følte at han innehar ein større praksis kompetanse enn noen av det meir 
-teoretiske annlagte gruppemedlemmene. I etterkant ser me at dette har fungert bra i praksis.
-Kvart medlem har et eget ansvarområde på prosjekte, noe som vil føre til ein naturleg eierskap av prosjektet.
+Det var imidlertidig ein praktisk del i problemstillingen (eksperiment), som vi følte Joakim ville være bra egnet 
+til å få ansvar for, da vi følte at han innehar ein større praksis kompetanse enn noen av det meir 
+teoretisk annlagte gruppemedlemmene. I etterkant ser vi at dette har fungert bra i praksis.
+Kvart medlem har et eget ansvarområde på prosjektet, noe som vil førte til en naturleg eierskap av prosjektet.
 Her har me og anvendt Johnson and Johnson regel 1(Sørge for at gruppas felles mål anvender hvert medlems
 individuelle kompetanse), anngående effektive grupper, og (husker ikkje kvar eierskap til
 prosjektet kjem fra). 
